[gd_scene load_steps=18 format=3 uid="uid://b6v5rsjtk3kjr"]

[ext_resource type="PackedScene" uid="uid://kicjwmh02uwf" path="res://COGITO/PackedScenes/cogito_player.tscn" id="1_vvhak"]
[ext_resource type="Script" path="res://COGITO/InventoryPD/CustomResources/InventorySlotPD.gd" id="2_d88b2"]
[ext_resource type="Script" path="res://COGITO/InventoryPD/CustomResources/WieldableItemPD.gd" id="3_8qt77"]
[ext_resource type="Script" path="res://COGITO/InventoryPD/cogito_inventory.gd" id="3_ghji4"]
[ext_resource type="Script" path="res://void_manager.gd" id="4_pyi2r"]
[ext_resource type="PackedScene" uid="uid://cwral5ah8msdk" path="res://delivery_tube_system_1.tscn" id="5_3q5fd"]
[ext_resource type="PackedScene" uid="uid://cwd3g16ep0idw" path="res://COGITO/PackedScenes/Pickups/pickup_flashlight.tscn" id="6_5qkxp"]
[ext_resource type="PackedScene" uid="uid://dw1uy1nii005w" path="res://magical_scale.tscn" id="7_m8lkw"]
[ext_resource type="PackedScene" uid="uid://c7s0pnjk10x4b" path="res://EctoplasmPool.tscn" id="8_lutmf"]
[ext_resource type="PackedScene" uid="uid://dvvunfqidipri" path="res://MortalPortalArea.tscn" id="9_u0vhu"]
[ext_resource type="PackedScene" uid="uid://bgtmaojcf3ykb" path="res://ParanormalPortalArea.tscn" id="10_fmgri"]

[sub_resource type="Environment" id="Environment_tgly4"]
background_mode = 1
background_color = Color(0.0196078, 0.0196078, 0.0196078, 1)
ambient_light_source = 1
ambient_light_color = Color(0.128509, 0.128784, 0.379606, 1)
ambient_light_energy = 0.8
glow_enabled = true
glow_levels/3 = 0.5
glow_levels/4 = 0.6
glow_levels/5 = 0.7
glow_blend_mode = 0
fog_enabled = true
fog_mode = 1
fog_light_color = Color(0, 0, 0, 1)
fog_density = 1.0
fog_height = 20.0
fog_height_density = -0.2
volumetric_fog_enabled = true
volumetric_fog_density = 0.01
volumetric_fog_albedo = Color(0.306923, 0.306923, 0.306923, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_02b4t"]
albedo_color = Color(0.164706, 0.164706, 0.164706, 1)
metallic = 0.7
roughness = 0.4

[sub_resource type="BoxShape3D" id="BoxShape3D_myms6"]
size = Vector3(1000, 1, 1000)

[sub_resource type="Resource" id="Resource_v8drn"]
script = ExtResource("3_8qt77")
no_reload = false
charge_max = 0.0
ammo_item_name = ""
charge_current = 0.0
wieldable_range = 0.0
wieldable_damage = 0.0
name = ""
description = ""
is_stackable = false
stack_size = 0
drop_scene = null
hint_text_on_use = ""
item_size = Vector2(1, 1)

[sub_resource type="Resource" id="Resource_ap646"]
script = ExtResource("2_d88b2")
inventory_item = SubResource("Resource_v8drn")
quantity = 1
origin_index = -1

[sub_resource type="Resource" id="Resource_lod2t"]
resource_local_to_scene = true
script = ExtResource("3_ghji4")
grid = true
starter_inventory = Array[ExtResource("2_d88b2")]([null])
inventory_size = Vector2i(5, 3)
inventory_slots = Array[ExtResource("2_d88b2")]([null, null, null, null, null, null, null, null, null, null, null, null, null, null, null])
first_slot = SubResource("Resource_ap646")

[node name="SortingFacility" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tgly4")

[node name="MainPlatform" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
material_override = SubResource("StandardMaterial3D_02b4t")
size = Vector3(1000, 1, 1000)

[node name="StaticBody3D" type="StaticBody3D" parent="MainPlatform"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainPlatform/StaticBody3D"]
shape = SubResource("BoxShape3D_myms6")

[node name="VoidManager" type="Node3D" parent="."]
script = ExtResource("4_pyi2r")

[node name="CogitoPlayer" parent="." instance=ExtResource("1_vvhak")]
transform = Transform3D(-4.37114e-08, 0, -0.999999, 0, 1, 0, 0.999999, 0, -4.37114e-08, -16.986, 2.2001, 0)
inventory_data = SubResource("Resource_lod2t")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.495459, 0.868632, 0, -0.868632, 0.495459, 0, 36.4601, 24.627)
light_color = Color(0.705882, 0.705882, 0.8, 1)
light_energy = 3.0
light_indirect_energy = 0.0
shadow_enabled = true

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.1112, 5, 19.9184)
light_color = Color(0.647059, 0.588235, 0.8, 1)
light_energy = 10.0
shadow_enabled = true
omni_range = 25.0

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.8464, 5, 20.3598)
light_color = Color(0.588235, 0.65098, 0.8, 1)
light_energy = 10.0
shadow_enabled = true
omni_range = 25.0
omni_attenuation = 1.5

[node name="OmniLight3D3" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20.0851, 5, -20.0808)
light_color = Color(0.705882, 0.705882, 0.8, 1)
light_energy = 10.0
shadow_enabled = true
omni_range = 25.0
omni_attenuation = 1.5

[node name="OmniLight3D4" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.5703, 5, -20.394)
light_color = Color(0.588235, 0.8, 0.705882, 1)
light_energy = 10.0
shadow_enabled = true
omni_range = 25.0
omni_attenuation = 1.5

[node name="OmniLight3D5" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 26.9452, 17.0023)
light_color = Color(0.8, 0.8, 0.8, 1)
light_energy = 10.0
omni_range = 30.0

[node name="DeliveryTubeSystem1" parent="." instance=ExtResource("5_3q5fd")]

[node name="Pickup_Flashlight" parent="." instance=ExtResource("6_5qkxp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.9488, 1, 0)

[node name="MagicalScale" parent="." instance=ExtResource("7_m8lkw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0.5, 0)

[node name="EctoplasmPool" parent="." instance=ExtResource("8_lutmf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1.8, 0)

[node name="MortalPortalArea" parent="." instance=ExtResource("9_u0vhu")]
transform = Transform3D(1, 0, 0, 0, -0.707107, 0.707107, 0, -0.707107, -0.707107, 0.537, 6.8, 9)

[node name="ParanormalPortalArea" parent="." instance=ExtResource("10_fmgri")]
transform = Transform3D(1, 0, 0, 0, -0.707107, -0.707107, 0, 0.707107, -0.707107, -0.537, 6.8, -9)
